--- a/Bamboo1.ipynb
+++ b/Bamboo1.ipynb
@@ -27,12 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import smbus\n",
     "import time\n",
+    "import math\n",
     "\n",
     "bus = smbus.SMBus(1)\n",
     "i2c_addr_flex = 0x48 # our flex sensor slave address\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +104,8 @@
     "\n",
     "        # Read data back from 0x4E(78), 7 bytes\n",
     "        # Status, xMag msb, xMag lsb, yMag msb, yMag lsb, zMag msb, zMag lsb\n",
-    "        data = bus.read_i2c_block_data(0x0C, 0x4E, 7)\n",
-    "#         print(data)\n",
+    "        data = bus.read_i2c_block_data(i2c_addr, 0x4E, 7)\n",
+    "        print(data)\n",
     "\n",
     "        xMag = data[1] * 256 + data[2]\n",
     "        if xMag > 32767 :\n",
@@ -117,9 +118,13 @@
     "        zMag = data[5] * 256 + data[6]\n",
     "        if zMag > 32767 :\n",
     "            zMag -= 65536\n",
+    "            \n",
+    "        heading = math.atan2(yMag, xMag) * 180 / math.pi\n",
+    "        \n",
     "\n",
     "        # Output data to screen\n",
     "        print(\"Magnetice Field (x, y, z) = \", xMag, yMag, zMag)\n",
+    "        print(heading + 330)\n",
     "        time.sleep(duration/no_of_reading)\n",
     "        no_of_reading = no_of_reading - 1\n",
     "\n",
@@ -131,71 +136,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "flex reading:  8138\n",
-      "flex reading:  8784\n",
-      "flex reading:  8752\n",
-      "flex reading:  9212\n",
-      "flex reading:  10443\n",
-      "flex reading:  11707\n",
-      "flex reading:  12923\n",
-      "flex reading:  9989\n",
-      "flex reading:  8387\n",
-      "flex reading:  8932\n",
-      "flex reading:  11904\n",
-      "flex reading:  12919\n",
-      "flex reading:  13470\n",
-      "flex reading:  9688\n",
-      "flex reading:  8307\n",
-      "flex reading:  8615\n",
-      "flex reading:  13247\n",
-      "flex reading:  9804\n",
-      "flex reading:  9895\n",
-      "flex reading:  9085\n"
+      "flex reading:  16906\n",
+      "flex reading:  16911\n",
+      "Magnetice Field (x, y, z) =  39 -33 72\n",
+      "-40.23635830927382\n",
+      "Magnetice Field (x, y, z) =  32 -29 69\n",
+      "-42.18444331578877\n"
      ]
     }
    ],
    "source": [
-    "read_flex(i2c_addr_flex, 10, 20)\n",
-    "# read_compass(i2c_addr_compass, 2, 2)"
+    "read_flex(i2c_addr_flex, 2, 2)\n",
+    "read_compass(i2c_addr_compass, 2, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Magnetice Field (x, y, z) =  -2 -107 22\n",
-      "Magnetice Field (x, y, z) =  -3 -108 19\n",
-      "Magnetice Field (x, y, z) =  -2 -104 21\n",
-      "Magnetice Field (x, y, z) =  3 -104 14\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-74e1859e26e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mread_compass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi2c_addr_compass\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-27-5d768883958f>\u001b[0m in \u001b[0;36mread_compass\u001b[0;34m(i2c_addr, duration, no_of_reading)\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0;31m# Output data to screen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Magnetice Field (x, y, z) = \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mxMag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0myMag\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mzMag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mduration\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mno_of_reading\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0mno_of_reading\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mno_of_reading\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "[2, 0, 22, 255, 207, 0, 64]\n",
+      "Magnetice Field (x, y, z) =  22 -49 64\n",
+      "-65.82089285331082\n",
+      "[2, 0, 28, 255, 207, 0, 64]\n",
+      "Magnetice Field (x, y, z) =  28 -49 64\n",
+      "-60.25511870305779\n",
+      "[2, 0, 26, 255, 212, 0, 65]\n",
+      "Magnetice Field (x, y, z) =  26 -44 65\n",
+      "-59.42077312751099\n",
+      "[2, 0, 30, 255, 208, 0, 62]\n",
+      "Magnetice Field (x, y, z) =  30 -48 62\n",
+      "-57.9946167919165\n",
+      "[2, 0, 27, 255, 209, 0, 63]\n",
+      "Magnetice Field (x, y, z) =  27 -47 63\n",
+      "-60.124007308310574\n"
      ]
     }
    ],
    "source": [
-    "read_compass(i2c_addr_compass, 5, 5)"
+    "read_compass(i2c_addr_compass, 10, 5)"
    ]
   },
   {
@@ -226,6 +216,68 @@
     "client.publish(\"IC.embedded/Faraday\", \"HEY MAN\")\n",
     "print(\"Here3\")\n",
     "print(\"done\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 255, 207, 255, 111, 0, 46]\n",
+      "Magnetice Field (x, y, z) =  -49 -145 46\n",
+      "221.32829310517087\n",
+      "[2, 255, 216, 255, 117, 0, 46]\n",
+      "Magnetice Field (x, y, z) =  -40 -139 46\n",
+      "223.94578033722425\n",
+      "[2, 255, 169, 255, 191, 0, 54]\n",
+      "Magnetice Field (x, y, z) =  -87 -65 54\n",
+      "186.76438067579048\n",
+      "[2, 255, 167, 255, 194, 0, 34]\n",
+      "Magnetice Field (x, y, z) =  -89 -62 34\n",
+      "184.86219614691484\n",
+      "[2, 255, 166, 255, 192, 0, 33]\n",
+      "Magnetice Field (x, y, z) =  -90 -64 33\n",
+      "185.4170552764674\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_compass(i2c_addr_compass, 10, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 255, 218, 255, 111, 0, 50]\n",
+      "Magnetice Field (x, y, z) =  -38 -145 50\n",
+      "225.3148029628785\n",
+      "[2, 255, 212, 255, 111, 0, 53]\n",
+      "Magnetice Field (x, y, z) =  -44 -145 53\n",
+      "223.11966983447616\n",
+      "[2, 255, 250, 255, 118, 0, 81]\n",
+      "Magnetice Field (x, y, z) =  -6 -138 81\n",
+      "237.51044707800085\n",
+      "[2, 0, 10, 255, 156, 0, 99]\n",
+      "Magnetice Field (x, y, z) =  10 -100 99\n",
+      "245.71059313749964\n",
+      "[2, 255, 223, 255, 105, 0, 42]\n",
+      "Magnetice Field (x, y, z) =  -33 -151 42\n",
+      "227.6722292886831\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_compass(i2c_addr_compass, 10, 5)"
    ]
   },
   {
